# discord-activity-server

./: .gitmodules  Cargo.toml
app/activity-server/: Cargo.toml  Dockerfile  build.rs
app/activity-server/proto/: auth.proto
app/activity-server/src/: config.rs  main.rs
app/activity-server/src/ext/: auth.rs
app/activity-server/src/server/: auth.rs  gateway.rs  message.rs  mod.rs
service/discord-auth/: Cargo.toml
service/discord-auth/src/: lib.rs
service/room/: Cargo.toml
service/room/src/: lib.rs  room.rs  room_manager.rs
